--- a/Views/Admin/StudyResult.cshtml
+++ b/Views/Admin/StudyResult.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TableTransfer>;
+﻿@model List<V_User_Tranfer_Course>;
 <!DOCTYPE html>
 <html lang="en">
 @{
@@ -38,6 +38,7 @@
     </style>
 
 </head>
+
 <body>
     <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:white;" id="mySidebar">
         <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
@@ -56,68 +57,81 @@
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
     <div class="w3-main" style="margin-left:250px;">
+        @using (Html.BeginForm("StudyResult", "Admin",new { id=ViewBag.id}, FormMethod.Post))
+        {
+            <button type="submit" class="btn btn-primary my-3">บันทึก</button>
+            <table id="example" class="display">
+                <thead>
+                    <tr>
+                        <th>รหัสผลเทียบโอน</th>
+                        <th>รหัสนักศึกษา</th>
+                        <th>รหัสเทียบวิชา</th>
+                        <th>เกรดปวส.</th>
 
-        <table id="example" class="display">
-            <thead>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for (int i = 0; i < Model.Count(); i++)
+                    {
+                        <tr>
+                            <td>
+
+                                @Model[i].TransReCode
+
+                            </td>
+                            <td>@Model[i].UserName</td>
+                            <td>  @Model[i].CodeCoursetrans</td>
+                            <td>
+
+                                @Html.HiddenFor(x => x[i].Id)
+                                @Html.HiddenFor(x => x[i].TransReCode)
+                                @Html.HiddenFor(x => x[i].CodeSubtrans)
+                                @Html.TextBoxFor(modelItem => modelItem[i].GradeTra)
+
+                            </td>
+
+                        </tr>
+                    }
+
+                    @* @foreach (var DataUser in Model)
+                {
                 <tr>
-                    <th>รหัสผลเทียบโอน</th>
-                    <th>รหัสนักศึกษา</th>
-                    @* <th>รหัสวิชาปวส.</th>
-                    @* <th>รหัสวิชาปวส.</th>
-                    <th>ชื่อวิชาปวส.</th> *@
-                    <th>รหัสเทียบวิชา</th>
-                    <th>เกรดปวส.</th>
-                    @* <th>รหัสวิชาวิทย์คอม</th>
-                    <th>ชื่อวิชาวิทย์คอม</th> *@
-                    
+                <td>@DataUser.Transcode</td>
+                <td>@DataUser.Id</td>
+                <td>@DataUser.Codetrasub</td>
+                <td>@DataUser.Codesubtra</td>
+                <td>@DataUser.Namethaitra</td>
+                <td>@DataUser.GradeTra</td>
+                <td>@DataUser.Codecssub</td>
+                <td>@DataUser.Codesubcs</td>
+                <td>@DataUser.Namethaics</td>
 
-                   @*  <th>เทียบโอนวิชา</th>
-                    <th>ลบ</th> *@
+                <td>
+                <a class="btn btn-danger" asp-controller="Admin"
+                asp-action="DeleteUser"
+                asp-route-id="@DataUser.Id" onclick="return confirm('คุณต้องการจะลบ @DataUser.Transcode @DataUser.FirstName @DataUser.LastName')">Delete</a>
+                </td>
 
                 </tr>
-            </thead>
-            <tbody>
-                @foreach (var DataUser in Model)
-                {
-                    <tr>
-                        <td>@DataUser.TransReCode</td>
-                        <td>@DataUser.Transcode</td>
-                        <td>@DataUser.CodeSubtran</td>
-                        <td>@DataUser.GradeTra</td>
-
-                    </tr>
-                }
-                @* @foreach (var DataUser in Model)
-                {
-                    <tr>
-                        <td>@DataUser.Transcode</td>
-                        <td>@DataUser.Id</td>
-                        <td>@DataUser.Codetrasub</td>
-                        <td>@DataUser.Codesubtra</td>
-                        <td>@DataUser.Namethaitra</td>
-                        <td>@DataUser.GradeTra</td>
-                        <td>@DataUser.Codecssub</td>
-                        <td>@DataUser.Codesubcs</td>
-                        <td>@DataUser.Namethaics</td>
-
-                         <td>
-                            <a class="btn btn-danger" asp-controller="Admin"
-                               asp-action="DeleteUser"
-                               asp-route-id="@DataUser.Id" onclick="return confirm('คุณต้องการจะลบ @DataUser.Transcode @DataUser.FirstName @DataUser.LastName')">Delete</a>
-                        </td> 
-
-                    </tr>
                 } *@
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        }
+
+
 
     </div>
 
 </body>
+
 </html>
 <script>
+
+
+
     $(document).ready(function () {
         $('#example').DataTable();
+        forTestNaja();
     });
 
     // Open and close the sidebar on medium and small screens
@@ -154,6 +168,11 @@
             x.previousElementSibling.className =
                 x.previousElementSibling.className.replace(" w3-theme", "");
         }
+    }
+
+
+    function forTestNaja(){
+
     }
 
 </script>
