--- a/Views/Home/DetailSubTra.cshtml
+++ b/Views/Home/DetailSubTra.cshtml
@@ -1,4 +1,4 @@
-﻿@* @model SubJectTra; *@
+﻿@model V_CourseTra;
 @{
     ViewData["Title"] = "DetailSubTra";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -57,12 +57,12 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
-           @*  <hr />
+            <hr />
             <div class="row">
-                <label asp-for="SubDes" class="form-label"></label>
+                <label asp-for="Subdestra" class="form-label"></label>
                 <p></p>
-                <textarea rows="5" cols="50" asp-for="SubDes" class="form-control-lg"></textarea>
-            </div> *@
+                <textarea rows="5" cols="50" asp-for="Subdestra" class="form-control-lg"></textarea>
+            </div>
 
         </form>
     </div>
