--- a/Views/Admin/TransferCourse.cshtml
+++ b/Views/Admin/TransferCourse.cshtml
@@ -47,8 +47,7 @@
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseCsAdmin","Admin")">หลักสูตรวิทย์คอม</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseTraAdmin","Admin")">หลักสูตรปวส.</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("AddSubCs","Admin")">เพิ่มรายวิชาcs</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">เทียบโอนวิชา</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("StudyResult","Admin")">วิชาเทียบโอน</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">เทียบโอนหลักสูตร</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TableData","Admin")">ตารางข้อมูลนักศึกษา</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("ViewImage","Admin")">ตารางข้อมูลทรานสคริปต์</a>
     </nav>
@@ -69,10 +68,10 @@
                 <thead>
                     <tr>
                         <th>รหัสเทียบหลักสูตร</th>
-                        <th>รหัสหลักสูตรปวส.</th>
-                        <th>ชื่อหลักสูตรปวส.</th>
                         <th>รหัสหลักสูตรวิทย์คอม</th>
                         <th>ชื่อหลักสูตรวิทย์คอม</th>
+                        <th>รหัสหลักสูตรปวส.</th>
+                        <th>ชื่อหลักสูตรปวส.</th>
 
                         @* <th>แก้ไข</th> *@
                         <th>รายละเอียดวิชา</th>
@@ -85,10 +84,11 @@
                     {
                         <tr>
                             <td>@TraCs.CodeCoursetrans</td>
-                            <td>@TraCs.CourseTra</td>
-                            <td>@TraCs.Namecoursetra</td>
                             <td>@TraCs.CourseCs</td>
                             <td>@TraCs.Namecoursecs</td>
+                            <td>@TraCs.CourseTra</td>
+                            <td>@TraCs.Namecoursetra</td>
+
                             @* <td><a class="btn btn-warning" asp-controller="Admin" asp-action="EditCourseCsTra" asp-route-id="@TraCs.Id">แก้ไข</a></td> *@
                         <td><a class="btn btn-danger" asp-controller="Admin" asp-action="TransferSub" asp-route-id="@TraCs.CodeCoursetrans">ดูข้อมูลวิชา</a></td>
                         <td><a class="btn btn-danger" asp-controller="Admin" asp-action="DeleteCourse" asp-route-id="@TraCs.CodeCoursetrans" onclick="return confirm('คุณต้องการลบหรือไม่')">ลบ</a></td>
