--- a/Views/Admin/StudyResult.cshtml
+++ b/Views/Admin/StudyResult.cshtml
@@ -74,7 +74,7 @@
                                 @Html.DisplayFor(x => x[i].TransReCode)
                             </td>
                             <td>@Model[i].UserName</td>
-                            <td>@Model[i].CodeCoursetrans</td>
+                            <td>@Model[i].CodeSubtrans</td>
                             <td>@Model[i].Namethaitra</td>
                             <td>@Model[i].Namethaics</td>
                             <td>
