--- a/Views/Admin/CourseTraAdmin.cshtml
+++ b/Views/Admin/CourseTraAdmin.cshtml
@@ -56,7 +56,7 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <h1 class="w3-xxxlarge">หลักสูตรวิทยาการคอม</h1>
+            <h1 class="w3-xxxlarge">หลักสูตรปวส.</h1>
         </header>
         <br />
         <a class="btn btn-group" style="background-color:black;" asp-controller="Admin" asp-action="AddCourseTra"><span style="color:white;">+ เพิ่มหลักสูตรปวส.</span></a><br>
