--- a/Views/Home/DetailCourseCs.cshtml
+++ b/Views/Home/DetailCourseCs.cshtml
@@ -44,7 +44,7 @@
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
         <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseCs","Home")">ย้อนกลับ</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">หลักสูตร</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">@Model.FirstOrDefault()?.Namecoursecs</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
@@ -53,7 +53,7 @@
 
         <header class="w3-container w3-pale-white" style="padding:64px 32px">
 
-            <center><h1 class="w3-xxxlarge">หลักสูตรวิทย์คอม</h1></center>
+            <Center><h1>@Model.FirstOrDefault()?.Namecoursecs</h1></Center>
 
         </header>
 
@@ -61,9 +61,6 @@
 
             <thead>
                 <tr>
-                    <th>รหัสรายวิชา</th>
-                    <th>รหัสหลักสูตร</th>
-                    <th>ชื่อหลักสูตร</th>
                     <th>รหัสกลุ่มวิชา</th>
                     <th>ชื่อกลุ่มวิชา</th>
                     <th>รหัสวิชา</th>
@@ -82,9 +79,6 @@
                 @foreach (var CourseCs in Model)
                 {
                     <tr>
-                        <td>@CourseCs.Codecssub</td>
-                        <td>@CourseCs.Codecoursecs</td>
-                        <td>@CourseCs.Namecoursecs</td>
                         <td>@CourseCs.Namesubgroup</td>
                         <td>@CourseCs.Namesubtype</td>
                         <td>@CourseCs.Codesubcs</td>
