--- a/Views/Admin/DetailCourseCs.cshtml
+++ b/Views/Admin/DetailCourseCs.cshtml
@@ -1,14 +1,13 @@
-﻿ @model IEnumerable<ProjectFinal1.Models.V_CourseTra>;
+﻿ @model IEnumerable<ProjectFinal1.Models.V_CourseCss>;
 <!DOCTYPE html>
 <html lang="en">
 @{
-    ViewData["Title"] = "DetailCourseTra";
+    ViewData["Title"] = "DetailCourseCs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataTables Example</title>
 
     <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -25,7 +24,6 @@
         body {
             font-family: "Roboto", sans-serif;
             color: black;
-            /* background: linear-gradient(to top right, #33cccc 38%, #0000ff 100%); */
         }
 
         .w3-bar-block .w3-bar-item {
@@ -42,11 +40,11 @@
 
 <body>
     <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:white;" id="mySidebar">
-        <span class="w3-bar-item w3-border-bottom w3-large">User</span>
+        <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-        <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseTra","Home")">ย้อนกลับ</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">@Model.FirstOrDefault()?.Namecoursetra</a>
+        <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseCsAdmin","Admin")">ย้อนกลับ</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">@Model.FirstOrDefault()?.Namecoursecs</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
@@ -55,7 +53,7 @@
 
         <header class="w3-container w3-pale-white" style="padding:64px 32px">
 
-            <Center><h1>@Model.FirstOrDefault()?.Namecoursetra</h1></Center>
+            <Center><h1>@Model.FirstOrDefault()?.Namecoursecs</h1></Center>
 
         </header>
 
@@ -63,6 +61,8 @@
 
             <thead>
                 <tr>
+                    <th>รหัสกลุ่มวิชา</th>
+                    <th>ชื่อกลุ่มวิชา</th>
                     <th>รหัสวิชา</th>
                     <th>ชื่อวิชาไทย</th>
                     <th>ชื่อวิชาอังกฤษ</th>
@@ -76,25 +76,29 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var CourseTra in Model)
+                @foreach (var CourseCs in Model)
                 {
                     <tr>
-                        <td>@CourseTra.Codesubtra</td>
-                        <td>@CourseTra.Namethaitra</td>
-                        <td>@CourseTra.Nameengtra</td>
-                        <td>@CourseTra.Credittra</td>
-                        <td>@CourseTra.Status</td>
+                        <td>@CourseCs.Namesubgroup</td>
+                        <td>@CourseCs.Namesubtype</td>
+                        <td>@CourseCs.Codesubcs</td>
+                        <td>@CourseCs.Namethaics</td>
+                        <td>@CourseCs.Nameengcs</td>
+                        <td>@CourseCs.Credits</td>
+                        <td>@CourseCs.Status</td>
 
                         <td>
                             <center>
                                 <a class="btn btn-warning" asp-controller="Home"
-                                   asp-action="DetailSubTra"
-                                   asp-route-id="@CourseTra.Codetrasub">Detail</a>
+                                   asp-action="DetailSubCs"
+                                   asp-route-id="@CourseCs.Codecssub">Detail</a>
                             </center>
                         </td>
 
                     </tr>
                 }
+
+
             </tbody>
         </table>
     </div>
@@ -143,3 +147,4 @@
     }
 
 </script>
+
