--- a/Areas/Identity/Pages/Account/Image.cshtml
+++ b/Areas/Identity/Pages/Account/Image.cshtml
@@ -17,7 +17,7 @@
 
             <div class="form-floating mb-3" hidden>
                 <select asp-for="Input.Status" class="form-control" >
-                    <option value="มีไฟล์แล้ว">มีไฟล์แล้ว</option>
+                    <option value="มีไฟล์">มีไฟล์</option>
                 </select>
                 <label asp-for="Input.Status"></label>
             </div> 
