--- a/Views/Admin/TransferCourse.cshtml
+++ b/Views/Admin/TransferCourse.cshtml
@@ -89,7 +89,7 @@
                             <td>@TraCs.Namecoursetra</td>
 
                             @* <td><a class="btn btn-warning" asp-controller="Admin" asp-action="EditCourseCsTra" asp-route-id="@TraCs.Id">แก้ไข</a></td> *@
-                        <td><a class="btn btn-danger" asp-controller="Admin" asp-action="TransferSub" asp-route-id="@TraCs.CodeCoursetrans">ดูข้อมูลวิชา</a></td>
+                        <td><a class="btn btn-warning" asp-controller="Admin" asp-action="TransferSub" asp-route-id="@TraCs.CodeCoursetrans">ดูข้อมูลวิชา</a></td>
                         <td><a class="btn btn-danger" asp-controller="Admin" asp-action="DeleteCourse" asp-route-id="@TraCs.CodeCoursetrans" onclick="return confirm('คุณต้องการลบหรือไม่')">ลบ</a></td>
                         </tr>
                     }
