--- a/Views/Admin/AddSubTra.cshtml
+++ b/Views/Admin/AddSubTra.cshtml
@@ -1,6 +1,6 @@
-﻿@model CsCourseStruc;
+﻿@model TraSub;
 @{
-    ViewData["Title"] = "AddSubCs";
+    ViewData["Title"] = "AddSubTra";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!DOCTYPE html>
@@ -27,8 +27,8 @@
         <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-        <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseCsAdmin", "Home")">ย้อนกลับ</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">เพิ่มรายวิชาวิทย์คอม</a>
+        <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseTraAdmin", "Home")">ย้อนกลับ</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">เพิ่มรายวิชาปวส.</a>
 
     </nav>
 
@@ -37,58 +37,52 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:64px 32px">
-            <h1 class="w3-xxxlarge">เพิ่มรายวิชาวิทย์คอม</h1>
+            <h1 class="w3-xxxlarge">เพิ่มรายวิชาปวส.</h1>
         </header>
         <br />
-        <form asp-controller="Admin" asp-action="AddSubCs" method="post">
+        <form asp-controller="Admin" asp-action="AddSubTra" method="post">
             <div class="row">
 
                 <div class="col-lg-3">
-                    <label asp-for="Codecssub">รหัสรายวิชาcs</label>
-                    <input type="text" asp-for="Codecssub" class="form-control">
-                    <span asp-validation-for="Codecssub" class="text-danger"></span>
+                    <label asp-for="Codetrasub">รหัสรายวิชาปวส.</label>
+                    <input type="text" asp-for="Codetrasub" class="form-control">
+                    <span asp-validation-for="Codetrasub" class="text-danger"></span>
                 </div>
 
                 <div class="col-lg-3">
-                    <label asp-for="Codecoursecs">รหัสหลักสูตรcs</label>
-                    <input type="text" asp-for="Codecoursecs" class="form-control">
-                    <span asp-validation-for="Codecoursecs" class="text-danger"></span>
+                    <label asp-for="Codecourse">รหัสหลักสูตรปวส.</label>
+                    <input type="text" asp-for="Codecourse" class="form-control">
+                    <span asp-validation-for="Codecourse" class="text-danger"></span>
                 </div>
 
                 <div class="col-lg-3">
-                    <label asp-for="Codesubgroup">รหัสกลุ่มวิชาcs</label>
-                    <input type="text" asp-for="Codesubgroup" class="form-control">
-                    <span asp-validation-for="Codesubgroup" class="text-danger"></span>
+                    <label asp-for="Codesubtra">รหัสวิชาปวส.</label>
+                    <input type="text" asp-for="Codesubtra" class="form-control">
+                    <span asp-validation-for="Codesubtra" class="text-danger"></span>
                 </div>
 
                 <div class="col-lg-3">
-                    <label asp-for="Codesubcs">รหัสวิชาcs</label>
-                    <input type="text" asp-for="Codesubcs" class="form-control">
-                    <span asp-validation-for="Codesubcs" class="text-danger"></span>
+                    <label asp-for="Namethaitra">ชื่อวิชาภาษาไทย</label>
+                    <input type="text" asp-for="Namethaitra" class="form-control">
+                    <span asp-validation-for="Namethaitra" class="text-danger"></span>
                 </div>
 
                 <div class="col-lg-3">
-                    <label asp-for="Namethaics">ชื่อวิชาภาษาไทย</label>
-                    <input type="text" asp-for="Namethaics" class="form-control">
-                    <span asp-validation-for="Namethaics" class="text-danger"></span>
+                    <label asp-for="Nameengtra">ชื่อวิชาภาษาอังกฤษ</label>
+                    <input type="text" asp-for="Nameengtra" class="form-control">
+                    <span asp-validation-for="Nameengtra" class="text-danger"></span>
                 </div>
 
                 <div class="col-lg-3">
-                    <label asp-for="Nameengcs">ชื่อวิชาภาษาอังกฤษ</label>
-                    <input type="text" asp-for="Nameengcs" class="form-control">
-                    <span asp-validation-for="Nameengcs" class="text-danger"></span>
+                    <label asp-for="Credittra">หน่วยกิต</label>
+                    <input type="text" asp-for="Credittra" class="form-control">
+                    <span asp-validation-for="Credittra" class="text-danger"></span>
                 </div>
 
                 <div class="col-lg-3">
-                    <label asp-for="Credits">หน่วยกิต</label>
-                    <input type="text" asp-for="Credits" class="form-control">
-                    <span asp-validation-for="Credits" class="text-danger"></span>
-                </div>
-
-                <div class="col-lg-3">
-                    <label asp-for="Subdescs">คำอธิบายรายวิชา</label>
-                    <input type="text" asp-for="Subdescs" class="form-control">
-                    <span asp-validation-for="Subdescs" class="text-danger"></span>
+                    <label asp-for="Subdestra">คำอธิบายรายวิชา</label>
+                    <input type="text" asp-for="Subdestra" class="form-control">
+                    <span asp-validation-for="Subdestra" class="text-danger"></span>
                 </div>
 
                 <div class="col-lg-3">
