--- a/Views/Admin/CourseTraAdmin.cshtml
+++ b/Views/Admin/CourseTraAdmin.cshtml
@@ -58,7 +58,7 @@
             <h1 class="w3-xxxlarge">หลักสูตรปวส.</h1>
         </header>
         <br />
-        <a class="btn btn-group" style="background-color:black;" asp-controller="Admin" asp-action="AddCourseTra"><span style="color:white;">+ เพิ่มหลักสูตรปวส.</span></a><br>
+        <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="AddCourseTra"><span style="color:white;">+ เพิ่มหลักสูตรปวส.</span></a> <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="AddSubTra"><span style="color:white;">+ เพิ่มการจับคู่วิชา</span></a><br>
         @if (Model.Count() > 0)
         {
             <br>
@@ -70,6 +70,7 @@
                         <th>สถานะ</th>
 
                         @* <th>แก้ไข</th> *@
+                        <th>รายละเอียด</th>
                         <th>ลบ</th>
                     </tr>
                 </thead>
@@ -82,6 +83,12 @@
                             <td>@CourseTra.Namecoursetra</td>
                             <td>@CourseTra.statuscoursetra</td>
 
+
+                            <td>
+                                <a class="btn btn-warning" asp-controller="Admin"
+                                   asp-action="DetailCourseTra"
+                                   asp-route-id="@CourseTra.Codecoursetra">View</a>
+                            </td>
                             @* <td>
                                 <a class="btn btn-warning" asp-controller="Admin"
                                    asp-action="EditCourseTra"
