--- a/Views/Admin/DetailCourseTra.cshtml
+++ b/Views/Admin/DetailCourseTra.cshtml
@@ -1,14 +1,14 @@
-﻿@model IEnumerable<DataUser>;
+﻿@model IEnumerable<ProjectFinal1.Models.V_CourseTra>;
 <!DOCTYPE html>
 <html lang="en">
 @{
-    ViewData["Title"] = "TableData";
+    ViewData["Title"] = "DetailCourseTra";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>DataTables Example</title>
 
     <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -25,6 +25,7 @@
         body {
             font-family: "Roboto", sans-serif;
             color: black;
+            /* background: linear-gradient(to top right, #33cccc 38%, #0000ff 100%); */
         }
 
         .w3-bar-block .w3-bar-item {
@@ -32,71 +33,70 @@
             font-weight: bold;
         }
 
-        thead {
-            padding: 30px;
+        tr {
+            padding: 100px;
         }
     </style>
 
 </head>
+
 <body>
     <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:white;" id="mySidebar">
         <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-        <a class="w3-bar-item w3-button" href="@Url.Action("Index","Home")">หน้าแรก</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("CourseCsAdmin","Admin")">หลักสูตรวิทย์คอม</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("CourseTraAdmin","Admin")">หลักสูตรปวส.</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Admin")">เทียบโอนหลักสูตร</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">ตารางข้อมูลนักศึกษา</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("ViewImage","Admin")">ตารางข้อมูลทรานสคริปต์</a>
+        <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseTraAdmin","Admin")">ย้อนกลับ</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">@Model.FirstOrDefault()?.Namecoursetra</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
     <div class="w3-main" style="margin-left:250px;">
 
+        <header class="w3-container w3-pale-white" style="padding:64px 32px">
+
+            <Center><h1>@Model.FirstOrDefault()?.Namecoursetra</h1></Center>
+
+        </header>
+
         <table id="example" class="display">
+
             <thead>
                 <tr>
-                    <th>รหัสนักศึกษา</th>
-                    <th>ชื่อ</th>
-                    <th>นามสกุล</th>
-                    <th>Email</th>
-                    <th>ทรานสคริปต์</th>
+                    <th>รหัสวิชา</th>
+                    <th>ชื่อวิชาไทย</th>
+                    <th>ชื่อวิชาอังกฤษ</th>
+                    <th>หน่วยกิต</th>
+                    <th>สถานะ</th>
 
-                    <th>เทียบโอนวิชา</th>
-                    <th>ลบ</th>
+
+                    <th>คำอธิบายรายวิชา</th>
+
 
                 </tr>
             </thead>
             <tbody>
-                @foreach (var DataUser in Model)
+                @foreach (var CourseTra in Model)
                 {
                     <tr>
-                        <td>@DataUser.Transcode</td>
-                        <td>@DataUser.FirstName</td>
-                        <td>@DataUser.LastName</td>
-                        <td>@DataUser.Email</td>
-                        <td>@DataUser.Status</td>
+                        <td>@CourseTra.Codesubtra</td>
+                        <td>@CourseTra.Namethaitra</td>
+                        <td>@CourseTra.Nameengtra</td>
+                        <td>@CourseTra.Credittra</td>
+                        <td>@CourseTra.Status</td>
 
                         <td>
                             <center>
-                                <a class='btn @(DataUser.HaveTranfer?"btn-success":" btn-warning") ' asp-controller="Admin"
-                               asp-action="StudyResult"
-                                   asp-route-id="@DataUser.Id">เทียบโอน</a>
+                                <a class="btn btn-warning" asp-controller="Home"
+                                   asp-action="DetailSubTra"
+                                   asp-route-id="@CourseTra.Codetrasub">Detail</a>
                             </center>
                         </td>
 
-                        <td>
-                            <a class="btn btn-danger" asp-controller="Admin"
-                               asp-action="DeleteUser"
-                               asp-route-id="@DataUser.Id" onclick="return confirm('คุณต้องการจะลบ @DataUser.Transcode @DataUser.FirstName @DataUser.LastName')">ลบ</a>
-                        </td>
                     </tr>
                 }
             </tbody>
         </table>
-
     </div>
 
 </body>
@@ -142,5 +142,6 @@
         }
     }
 
-
 </script>
+
+
