--- a/Areas/Identity/Pages/Account/Image.cshtml
+++ b/Areas/Identity/Pages/Account/Image.cshtml
@@ -3,11 +3,14 @@
 @{
     ViewData["Title"] = "Image";
 }
+<header class="w3-container" style="padding:26px 32px">
+    <h1 class="w3-xxxlarge">ทรานสคริปต์</h1>
+</header>
 <a button class="col-sm-1 btn btn-danger" type="submit" asp-area="Controller" asp-page="/Home/Index">ย้อนกลับ</a><br/><br/>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
     <div class="col-md-4">
         <form method="post" enctype="multipart/form-data">
+            
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Transcode" class="form-control" autocomplete="Transcode" aria-required="true" maxlength="14" placeholder="รหัสนักศึกษา" />
@@ -23,7 +26,7 @@
             </div> 
 
             <div class="form-group">
-                <label asp-for="FileUpload.FormFile" class="control-label">ไฟล์ทรานสคริปต์</label>
+                <label asp-for="FileUpload.FormFile" class="control-label">ไฟล์ทรานสคริปต์</label><br /><br />
                 <input asp-for="FileUpload.FormFile" class="form-control" />
                 <span asp-validation-for="FileUpload.FormFile" class="text-danger"></span>
             </div>
@@ -33,7 +36,6 @@
             </div>
         </form>
     </div>
-</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
