--- a/Views/Admin/DetailCourseCs.cshtml
+++ b/Views/Admin/DetailCourseCs.cshtml
@@ -51,9 +51,9 @@
 
     <div class="w3-main" style="margin-left:250px;">
 
-        <header class="w3-container w3-pale-white" style="padding:64px 32px">
+        <header class="w3-container w3-pale-white" style="padding:26px 32px">
 
-            <Center><h1>@Model.FirstOrDefault()?.Namecoursecs</h1></Center>
+            <Center><h1 class="w3-xxxlarge">@Model.FirstOrDefault()?.Namecoursecs</h1></Center>
 
         </header>
 
