--- a/Views/Home/DetailSubTra.cshtml
+++ b/Views/Home/DetailSubTra.cshtml
@@ -51,7 +51,7 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <h1 class="w3-xxxlarge">คำอธิบายรายวิชา</h1>
+            <center><h1 class="w3-xxxlarge">คำอธิบายรายวิชา</h1></center>
         </header>
         <br>
         <form id="profile-form" method="post">
