--- a/Views/Home/TransferCourse.cshtml
+++ b/Views/Home/TransferCourse.cshtml
@@ -55,7 +55,7 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <h1 class="w3-xxxlarge">เทียบโอนหลักสูตร</h1>
+            <center><h1 class="w3-xxxlarge">เทียบโอนหลักสูตร</h1></center>
         </header>
         <br />
             <br>
