--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -44,7 +44,7 @@
                         <span asp-validation-for="Input.Facebook" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Input.PhoneNumber" class="form-control" maxlength="12">
+                        <input asp-for="Input.PhoneNumber" class="form-control" maxlength="10">
                         <label asp-for="Input.PhoneNumber" class="form-label">เบอร์โทรศัพท์</label>
                         <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                     </div>
@@ -79,13 +79,13 @@
                         <span asp-validation-for="Input.LastName" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Input.InsCode" class="form-control">
+                        <input asp-for="Input.InsCode" class="form-control" disabled>
                         <label asp-for="Input.InsCode" class="form-label">รหัสสถาบัน</label>
                         <span asp-validation-for="Input.InsCode" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Input.Codecoursetra" class="form-control">
-                        <label asp-for="Input.Codecoursetra" class="form-label">รหัสสถาบัน</label>
+                        <input asp-for="Input.Codecoursetra" class="form-control" disabled>
+                        <label asp-for="Input.Codecoursetra" class="form-label">รหัสหลักสูตร</label>
                         <span asp-validation-for="Input.Codecoursetra" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
@@ -94,7 +94,7 @@
                         <span asp-validation-for="Input.Facebook" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Input.PhoneNumber" class="form-control" maxlength="12" placeholder="Please enter your phone number." />
+                        <input asp-for="Input.PhoneNumber" class="form-control" maxlength="10" placeholder="Please enter your phone number." />
                         <label asp-for="Input.PhoneNumber" class="form-label">เบอร์โทรศัพท์</label>
                         <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                     </div>
