--- a/Views/Admin/AddCourseTra.cshtml
+++ b/Views/Admin/AddCourseTra.cshtml
@@ -36,8 +36,8 @@
 
     <div class="w3-main" style="margin-left:250px;">
 
-        <header class="w3-container" style="padding:64px 32px">
-            <h1 class="w3-xxxlarge">เพิ่มหลักสูตรปวส.</h1>
+        <header class="w3-container" style="padding:26px 32px">
+            <center><h1 class="w3-xxxlarge">เพิ่มหลักสูตรปวส.</h1></center>
         </header>
         <br />
         <form asp-controller="Admin" asp-action="AddCourseTra" method="post">
