--- a/Views/Admin/CourseTraAdmin.cshtml
+++ b/Views/Admin/CourseTraAdmin.cshtml
@@ -47,7 +47,7 @@
         <a class="w3-bar-item w3-button w3-pale-blue">หลักสูตรปวส.</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Admin")">เทียบโอนหลักสูตร</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TableData","Admin")">ตารางข้อมูลนักศึกษา</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("ViewImage","Admin")">ตารางข้อมูลทรานสคริปต์</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("ViewImage","Admin")">ทรานสคริปต์</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
@@ -55,7 +55,7 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <h1 class="w3-xxxlarge">หลักสูตรปวส.</h1>
+            <center><h1 class="w3-xxxlarge">หลักสูตรปวส.</h1></center>
         </header>
         <br />
         <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="AddCourseTra"><span style="color:white;">+ เพิ่มหลักสูตรปวส.</span></a> <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="AddSubTra"><span style="color:white;">+ เพิ่มการจับคู่วิชา</span></a><br>
@@ -97,7 +97,7 @@
                             <td>
                                 <a class="btn btn-danger" asp-controller="Admin"
                                    asp-action="DeleteCourseTra"
-                                   asp-route-id="@CourseTra.Codecoursetra" onclick="return confirm('คุณต้องการจะลบหลักสูตรนี้หรือไม่')">ลบ</a>
+                                   asp-route-id="@CourseTra.Codecoursetra" onclick="return confirm('คุณต้องการจะลบ @CourseTra.Namecoursetra นี้หรือไม่')">ลบ</a>
                             </td>
                         </tr>
                     }
