--- a/Views/Admin/PairSub.cshtml
+++ b/Views/Admin/PairSub.cshtml
@@ -50,8 +50,8 @@
 
     <div class="w3-main" style="margin-left:250px;">
 
-        <header class="w3-container" style="padding:64px 32px">
-            <h1 class="w3-xxxlarge">เพิ่มการจับคู่หลักสูตร</h1>
+        <header class="w3-container" style="padding:26px 32px">
+            <center><h1 class="w3-xxxlarge">เพิ่มการจับคู่หลักสูตร</h1></center>
         </header>
 
         <form method="POST" asp-controller="Admin" asp-action="PairSub">
