--- a/Views/Admin/TransferCourse.cshtml
+++ b/Views/Admin/TransferCourse.cshtml
@@ -48,7 +48,7 @@
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseTraAdmin","Admin")">หลักสูตรปวส.</a>
         <a class="w3-bar-item w3-button w3-pale-blue">เทียบโอนหลักสูตร</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TableData","Admin")">ตารางข้อมูลนักศึกษา</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("ViewImage","Admin")">ตารางข้อมูลทรานสคริปต์</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("ViewImage","Admin")">ทรานสคริปต์</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
@@ -56,7 +56,7 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <h1 class="w3-xxxlarge">เทียบโอนหลักสูตร</h1>
+            <center><h1 class="w3-xxxlarge">เทียบโอนหลักสูตร</h1></center>
         </header>
         <br />
         <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="PairCourse"><span style="color:white;">+ เพิ่มการจับคู่หลักสูตร</span></a> <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="PairSub"><span style="color:white;">+ เพิ่มการจับคู่วิชา</span></a><br>
