--- a/Views/Admin/ViewImage.cshtml
+++ b/Views/Admin/ViewImage.cshtml
@@ -60,24 +60,22 @@
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseTraAdmin","Admin")">หลักสูตรปวส.</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Admin")">เทียบโอนหลักสูตร</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TableData","Admin")">ตารางข้อมูลนักศึกษา</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">รูปทรานสคริปต์</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">ทรานสคริปต์</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
     <div class="w3-main" style="margin-left:250px;">
 
-        <header class="w3-container w3-pale-white" style="padding:64px 32px">
-
-            <center><h1 class="w3-xxxlarge">รูปทรานสคริปต์</h1></center>
-
+        <header class="w3-container w3-pale-white" style="padding:26px 32px">
+            <center><h1 class="w3-xxxlarge">ทรานสคริปต์</h1></center>
         </header>
 
         <table id="example" class="display">
             <thead>
                 <tr>
                     <th>รหัสนักศึกษา</th>
-                    <th>รูปทรานสคริปต์</th>
+                    <th>ทรานสคริปต์</th>
                 </tr>
             </thead>
 
