--- a/Views/Home/CourseCs.cshtml
+++ b/Views/Home/CourseCs.cshtml
@@ -54,7 +54,10 @@
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
     <div class="w3-main" style="margin-left:250px;">
-
+        <header class="w3-container" style="padding:26px 32px">
+            <center><h1 class="w3-xxxlarge">หลักสูตรวิทยาการคอม</h1></center>
+        </header>
+        <br />
         <table id="example" class="display">
             <thead>
                 <tr>
