--- a/Views/Home/DetailCourseTra.cshtml
+++ b/Views/Home/DetailCourseTra.cshtml
@@ -53,9 +53,9 @@
 
     <div class="w3-main" style="margin-left:250px;">
 
-        <header class="w3-container w3-pale-white" style="padding:64px 32px">
+        <header class="w3-container w3-pale-white" style="padding:26px 32px">
 
-            <Center><h1>@Model.FirstOrDefault()?.Namecoursetra</h1></Center>
+            <Center><h1 class="w3-xxxlarge">@Model.FirstOrDefault()?.Namecoursetra</h></Center>
 
         </header>
 
